Modified token submission field so it is masked

--- a/resources/Original HTML/Submissions.html
+++ b/resources/Original HTML/Submissions.html
@@ -35,7 +35,7 @@
 <h2>Submissions</h2>
 
   <form onsubmit="tokenInfo(); return false;" id="tokenInfo">
-    <label for="tokenID">Token iD:  </label><input type="text" name="tokenID" id="tokenID" tabindex="1" required=true/></br>
+    <label for="tokenID">Token iD:  </label><input type="password" name="tokenID" id="tokenID" tabindex="1" required=true/></br>
   </form>
   <button type="submit" form="tokenInfo" id="submit" name="tokenID" value="Submit" tabindex="2">Submit</button>
 
